@@ -83,7 +83,6 @@ class SupervisedScheduler final : public Scheduler {
   alignas(64) std::atomic<uint64_t> _jobsSubmitted;
   alignas(64) std::atomic<uint64_t> _jobsDequeued;
   alignas(64) std::atomic<uint64_t> _jobsDone;
-  alignas(64) std::atomic<uint64_t> _jobsDirectExec;
 
   // During a queue operation there a two reasons to manually wake up a worker
   //  1. the queue length is bigger than _wakeupQueueLength and the last submit time
@@ -175,6 +174,8 @@ class SupervisedScheduler final : public Scheduler {
   Gauge<uint64_t>& _metricsQueueLength;
   Gauge<uint64_t>& _metricsAwakeThreads;
   Gauge<uint64_t>& _metricsNumWorkerThreads;
+  Counter& _metricsThreadsStarted;
+  Counter& _metricsThreadsStopped;
   Counter& _metricsQueueFull;
 };
 
